--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "Tailwind",
   "main": "index.js",
+  "homepage": "https://ItsHrishi.github.io/razorpay_clone",
   "scripts": {
-    "start": "vite"
+    "start": "vite",
+    "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
