--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,34 @@
 *node_modules/*
+# Node.js dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# Production build output
+/dist
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Editor-specific files
+*.swp
+*.swo
+*~
+.idea/
+.vscode/
+*.code-workspace
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Cache files
+/.cache
+/temp
